force-app/main/default/objects/Job_Posting__c/Job_Posting__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage job postings within the organization for employee referral programs.</description>
    <label>Job Posting</label>
    <nameField>
        <label>Job Posting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>