force-app/main/default/objects/Job_Posting__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <description>The date when this job posting closes or expires</description>
    <inlineHelpText>Enter the date when applications will no longer be accepted for this position</inlineHelpText>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>