force-app/main/default/objects/Job_Posting__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The department that owns this job posting</description>
    <inlineHelpText>Select the department that will manage this position</inlineHelpText>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Job Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>