force-app/main/default/objects/Job_Posting__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <description>The type of employment for this position</description>
    <inlineHelpText>Select the employment type: Full-Time, Part-Time, Contract, or Internship</inlineHelpText>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>