force-app/main/default/objects/Job_Posting__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hiring manager responsible for this job posting</description>
    <inlineHelpText>Select the user who will manage the hiring process for this position</inlineHelpText>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Postings</relationshipName>
    <type>Lookup</type>
</CustomField>