force-app/main/default/objects/Job_Posting__c/fields/Is_Remote__c.field-meta.xml
<CustomField>
    <fullName>Is_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this position allows remote work</description>
    <inlineHelpText>Check this box if the position can be performed remotely</inlineHelpText>
    <label>Is Remote</label>
    <type>Checkbox</type>
</CustomField>