force-app/main/default/objects/Job_Posting__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>The detailed job description including responsibilities and requirements</description>
    <inlineHelpText>Provide a comprehensive job description including key responsibilities, required skills, and qualifications</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>