force-app/main/default/objects/Job_Posting__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The physical location or office where this job is based</description>
    <inlineHelpText>Enter the city, office, or location for this position</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>