force-app/main/default/objects/Job_Posting__c/fields/Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who originally posted or owns publication of this job posting.</description>
    <inlineHelpText>Select the user responsible for posting this job.</inlineHelpText>
    <label>Posted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Job Postings Posted</relationshipLabel>
    <relationshipName>Posted_Job_Postings</relationshipName>
    <type>Lookup</type>
</CustomField>