force-app/main/default/objects/Job_Posting__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <description>The date when this job was posted or made available</description>
    <inlineHelpText>Enter the date when this position was officially posted</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>