force-app/main/default/objects/Job_Posting__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The job title for this posting</description>
    <inlineHelpText>Enter the official job title as it should appear to candidates</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>