force-app/main/default/objects/Job_Posting__c/fields/Total_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Total_Referrals__c</fullName>
    <description>Count of employee referrals submitted for this job posting</description>
    <inlineHelpText>Automatically calculated count of all referrals for this position</inlineHelpText>
    <label>Total Referrals</label>
    <summaryForeignKey>Employee_Referral__c.Job_Posting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>