force-app/main/default/objects/Job_Posting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Experience_Level__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Location__c</columns>
    <columns>Is_Remote__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>