force-app/main/default/objects/Job_Posting__c/listViews/Open_Positions.listView-meta.xml
<ListView>
    <fullName>Open_Positions</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Department__c</columns>
    <columns>Status__c</columns>
    <columns>Posted_Date__c</columns>
    <columns>Closing_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Positions</label>
</ListView>