force-app/main/default/objects/Job_Posting__c/listViews/Referral_Recruiters_Job_Posting.listView-meta.xml
<ListView>
    <fullName>Referral_Recruiters_Job_Posting</fullName>
    <filterScope>Queue</filterScope>
    <label>Referral Recruiters</label>
    <queue>Referral_Recruiters</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>